# bit_rs

./: Cargo.toml  ReadMe.md  config.json
src/: enums.rs  lib.rs  main.rs
src/btc_utils/: bits.rs  key_gen.rs  language.rs  mod.rs  stretch_key.rs
src/cli/: setup.rs
src/config/: setup.rs
src/output/: error.rs  message.rs  mod.rs
src/state/: args.rs  mod.rs  wallets.rs
