[package]
name = "bit_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.2", features = ["cargo", "derive", "wrap_help"] }
# clap = "*"
lazy_static = "1.4.0"

# (de)serialization
serde_derive = "1.0.79"
serde_json = "1.0"
serde = {version = "1.0.143", features = ["derive"] }
clap_builder = "4.4.18"
